{
    "name": "ModToolInput",
    "maps": [
        {
            "name": "PositionSelector",
            "id": "cc417fe5-0af7-4bb5-b28c-7f674611776a",
            "actions": [
                {
                    "name": "SwitchToModCam",
                    "type": "Value",
                    "id": "b3ce9ecb-3c00-43db-82bd-c923e2728975",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "Button With Two Modifiers",
                    "id": "c20f9353-8a3c-43ef-8cd5-ffc5938b304c",
                    "path": "ButtonWithTwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "92a46a73-ea88-48e4-8ded-dac6939ace48",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "627cf152-b4c4-4e13-9d7d-c3ec261341f0",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "148242ba-ea5f-42a0-ace2-e397a8f28c48",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchToModCam",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ModToolManager",
            "id": "8ea247d8-e084-479d-8b52-7e69acf3346c",
            "actions": [
                {
                    "name": "ToggleActive",
                    "type": "Button",
                    "id": "c8e99cb8-e82d-4dde-b15d-e3a8e0f7858b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Button With One Modifier",
                    "id": "3bf55fda-833c-4629-b2ac-fc30d82970ff",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "77b5063b-668e-4490-884a-25b1ac6837da",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "b362ba80-cd14-4867-bf14-f234c846493b",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActive",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}